--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "nodemon": "^3.1.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "vercel": "^39.1.1"
   }
 }
