--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT = "3000"
+MONGO_URI = "mongodb+srv://shubhammeshram579:22Stc0ui8KxHWBhJ@mongodb-learn.nztavtm.mongodb.net/demovercel"
+SESSION_SECRET = "CGtgY5FUFZIsnfLppBCPCyWGJGIqV3lg"
