--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = "3000"
 MONGO_URI = "mongodb+srv://shubhammeshram579:22Stc0ui8KxHWBhJ@mongodb-learn.nztavtm.mongodb.net/demovercel?retryWrites=true&w=majority"
-MONGO_LOCAL_URI = "mongodb://localhost:27017/demovercel"
+MONGO_LOCAL_URI = "mongodb://127.0.0.1:27017/demovercel"
 SESSION_SECRET = "CGtgY5FUFZIsnfLppBCPCyWGJGIqV3lg"
